unpackaged/main/default/objects/Event_Participant__c/fields/Event1__c.field-meta.xml
<CustomField>
    <fullName>Event1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event1</label>
    <referenceTo>Event1__c</referenceTo>
    <relationshipLabel>Event Participants</relationshipLabel>
    <relationshipName>Event_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>