unpackaged/main/default/objects/Event_Participant__c/fields/MultiPickList_Field__c.field-meta.xml
<CustomField>
    <fullName>MultiPickList_Field__c</fullName>
    <label>MultiPickList Field</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attendee Contact</fullName>
            </value>
            <value>
                <fullName>Organizer Contact</fullName>
            </value>
            <value>
                <fullName>Presenter Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>